# mnemoai

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: docs.yml  tests.yml
bash/ollama-env-mac/: README.md  ollama.environment.plist
bash/ollama-freeup-vram/: README.md  com.ollama.vramcleaner.plist  ollama-vram-cleaner.service  ollama_free_vram.sh
bash/system-command-app/: README.md  mnemoai-wrapper.sh  personal-ai-assistant-wrapper.sh
client/: __init__.py  agent.py  client.py  langgraph_agent.py  langgraph_client.py  mcp_tool_wrapper.py  orchestrator.py  reasoning_utils.py  router.py
client/managers/: agent_conversation_manager.py  dpo_collector.py  user_profile_manager.py
client/memory/: chroma_store.py  episodic_memory.py  faiss_store.py  playbook_store.py  reflector.py
client/ui/: chat_interface.py
docs/: ARCHITECTURE.md  advanced-features.md  architecture-overview.md  configuration.md  development.md  getting-started.md  index.md  productivity.md  usage.md
models/: base_model_controller.py  embeddings_controller.py  langchain_llm_controller.py  llm_controller.py  mantle_factory.py  provider_params.py  vision_model_controller.py
models/classes/: chat_ollama_wrapper.py  sagemaker_chat.py  sagemaker_vision_model.py  thinking_ollama.py
server/: server.py
server/tools/: __init__.py  background_tasks.py  describe_image.py  error_handler.py  execute_bash.py  file_edit.py  file_search.py  fs_read.py  fs_write.py  git_safety.py  plan_mode.py  rag_tool.py  todo_manager.py  tools_manager.py  web_crawler.py  web_search.py
server/tools/rag/: chroma_store.py  faiss_store.py  session.py  vector_store_controller.py
server/tools/readers/: __init__.py  chunking_helper.py  csv_reader.py  directory_reader.py  docx_reader.py  json_reader.py  line_reader.py  pdf_reader.py  search_reader.py
src/mnemoai/: __init__.py  __main__.py  main.py
src/mnemoai/client/: client.py  mcp_config.py  mcp_tool_wrapper.py
src/mnemoai/client/agent/: __init__.py  agent.py  orchestrator.py  reasoning_utils.py  router.py
src/mnemoai/client/managers/: agent_conversation_manager.py  user_profile_manager.py
src/mnemoai/client/memory/: chroma_store.py  episodic_memory.py  faiss_store.py  memory_store.py  playbook_store.py  reflector.py  skill_store.py
src/mnemoai/client/ui/: chat_interface.py  spinner.py
src/mnemoai/models/: mantle_factory.py  provider_params.py
src/mnemoai/models/chat_models/: sagemaker_chat.py
src/mnemoai/models/controllers/: embeddings_controller.py  llm_controller.py  vision_model_controller.py
src/mnemoai/server/: error_handler.py  server.py
src/mnemoai/server/tools/: __init__.py  background_tasks.py  describe_image.py  execute_bash.py  file_edit.py  file_search.py  fs_read.py  fs_write.py  git_safety.py  memory_tool.py  plan_mode.py  rag_tool.py  skill_tool.py  todo_manager.py  tools_manager.py  web_crawler.py  web_search.py
src/mnemoai/server/tools/rag/: __init__.py  chroma_store.py  faiss_store.py  session.py  vector_store_controller.py
src/mnemoai/server/tools/readers/: __init__.py  chunking_helper.py  csv_reader.py  directory_reader.py  docx_reader.py  json_reader.py  line_reader.py  pdf_reader.py  search_reader.py
src/mnemoai/utils/: __init__.py  config.py  config.yaml.bedrock.example  config.yaml.bedrock.mantle.example  config.yaml.example  configurator.py  console.py  logger.py  mcp.json.example  paths.py  prompts.yaml
src/mnemoai/utils/formatting/: __init__.py  code_formatter.py  response_parser.py  url_formatter.py
src/mnemoai/utils/skills_example/commit-message/: SKILL.md
src/mnemoai/utils/skills_example/skill-creator/: SKILL.md
src/personal_ai_assistant/: __init__.py  __main__.py  main.py
src/personal_ai_assistant/client/: client.py  mcp_tool_wrapper.py
src/personal_ai_assistant/client/agent/: agent.py  orchestrator.py  router.py
src/personal_ai_assistant/client/managers/: agent_conversation_manager.py  user_profile_manager.py
src/personal_ai_assistant/client/memory/: chroma_store.py  episodic_memory.py  faiss_store.py  playbook_store.py  reflector.py
src/personal_ai_assistant/client/ui/: chat_interface.py  spinner.py
src/personal_ai_assistant/models/: mantle_factory.py  provider_params.py
src/personal_ai_assistant/models/chat_models/: sagemaker_chat.py
src/personal_ai_assistant/models/controllers/: __init__.py  embeddings_controller.py  llm_controller.py  vision_model_controller.py
src/personal_ai_assistant/server/: error_handler.py  server.py
src/personal_ai_assistant/server/tools/: background_tasks.py  describe_image.py  execute_bash.py  file_edit.py  file_search.py  fs_read.py  fs_write.py  plan_mode.py  rag_tool.py  todo_manager.py  tools_manager.py  web_crawler.py  web_search.py
src/personal_ai_assistant/server/tools/rag/: __init__.py  chroma_store.py  faiss_store.py  (+2 more)
src/personal_ai_assistant/utils/: bm25.py  config.py  configurator.py  paths.py
src/personal_ai_assistant/utils/formatting/: __init__.py  code_formatter.py
tests/: conftest.py
tests/integration/: conftest.py  test_agent_live.py
tests/unit/: test_bash_confirmation.py  test_bedrock_endpoint.py  test_bm25.py  test_configurator.py  test_conversation_compaction.py  test_empty_turn_salvage.py  test_episodic_heuristics.py  test_error_handler.py  test_execute_bash.py  test_file_tools.py  test_formatters.py  test_git_safety.py  test_logger.py  test_mcp_config.py  test_memory_store.py  test_model_scoped_paths.py  test_orchestrator.py  test_paths.py  test_plan_mode_enforcement.py  test_prompts.py  test_reasoning_utils.py  test_response_parser.py  test_router.py  test_skill_store.py  test_skill_tool.py  test_skills_injection.py  test_tool_args_normalization.py  test_tool_pair_sanitizer.py  test_tool_progress_spinner.py  test_vision_content.py
utils/: config.py  config.yaml  config.yaml.bedrock.example  config.yaml.bedrock.mantle.example  config.yaml.example  configurator.py  paths.py
utils/formatting/: code_formatter.py
(+7 files in other folders)
