[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# PyPI distribution name. The bare "mnemoai" is rejected by PyPI as too
# similar to the existing "mnemo-ai" project, so the published package is
# "mnemoai-assistant" — but the import package and CLI command stay "mnemoai"
# (pip install mnemoai-assistant → import mnemoai / run `mnemoai`).
name = "mnemoai-assistant"
version = "0.9.3"
description = "Mnemo AI — a local agentic AI assistant (LangGraph + MCP) that learns and remembers, with multi-provider model support."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Bruno Pistone" }]
keywords = ["llm", "agent", "mcp", "langgraph", "bedrock", "ollama", "rag", "cli", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "aws-bedrock-token-generator>=1.1.0",
    "boto3>=1.42.78",
    "brave-search-python-client>=0.4.27",
    "chromadb>=1.5.5",
    "crawl4ai>=0.8.6",
    "faiss-cpu>=1.13.2",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.4",
    "langchain-aws>=1.4.1",
    "langchain-core>=1.2.23",
    "langchain-litellm>=0.3.5",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "litellm>=1.81.1",
    "mcp[cli]>=1.26.0",
    "mem0ai>=1.0.9",
    "mypy-boto3-sagemaker-runtime>=1.42.54",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "openai>=2.30.0",
    "prompt_toolkit>=3.0.52",
    "psutil>=7.2.2",
    "Pygments>=2.20.0",
    "PyPDF2>=3.0.1",
    "python-docx>=1.2.0",
    "qdrant-client>=1.17.1",
    "tiktoken>=0.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[project.urls]
Homepage = "https://github.com/brunopistone/mnemoai"
Repository = "https://github.com/brunopistone/mnemoai"
Issues = "https://github.com/brunopistone/mnemoai/issues"

[project.scripts]
# Installs the `mnemoai` terminal command (uv tool install . / pipx install .)
mnemoai = "mnemoai.main:cli"

[tool.hatch.build.targets.wheel]
# src layout: the single package `mnemoai` lives under src/. hatch
# ships the whole package (all .py plus the config.yaml.* onboarding templates
# that sit inside utils/). The MCP server is launched as a subprocess via module
# invocation (`python -m mnemoai.server.server`), so it just needs
# to be importable — no force-include of a script path required.
packages = ["src/mnemoai"]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
# Import sorting (isort rules). Run: `ruff check --fix .`
extend-select = ["I"]

[tool.ruff.lint.isort]
# Group our package as first-party so it sorts after third-party imports.
known-first-party = ["mnemoai"]
